--- a/News-Articles/BCGame_Promo_Free_Spins_on_Thor_Rage/index.html
+++ b/News-Articles/BCGame_Promo_Free_Spins_on_Thor_Rage/index.html
@@ -20,19 +20,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Discover Roobet’s exclusive August promos! Bet on CS2, UFC, and football to earn free bets, cash prizes, and raffle entries. Limited-time sportsbook offers."
+      content="Unlock 10 Free Spins daily on Thor's Rage at BC.Game this August! Wager €20 on selected weekends to claim your spins. Limited-time global promo."
     />
     <link rel="icon" type=“image/x-icon” href="/img/favicon.ico">
     <link
       rel="canonical"
-      href="https://www.all4wins.com/News-Articles/Roobet_August_Action/"
+      href="https://www.all4wins.com/News-Articles/BCGame_Promo_Free_Spins_on_Thor_Rage/"
     />
 
     <link rel="stylesheet" href="/newx-demoGames.css" />
 
-    <title>
-      Exclusive Roobet Sportsbook Promos for Esports & Football Fans
-    </title>
+    <title>BC.Game Promo: Free Spins on Thor's Rage – August 2025</title>
+
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -53,8 +52,8 @@
           {
             "@type": "ListItem",
             "position": 3,
-            "name": "Roobet's august Action",
-            "item": "https://www.all4wins.com/News-Articles/Roobet_August_Action/"
+            "name": " BC.Game Promo: Free Spins on Thor's Rage",
+            "item": "https://www.all4wins.com/News-Articles/BCGame_Promo_Free_Spins_on_Thor_Rage/"
           }
         ]
       }
@@ -222,7 +221,7 @@
     <div id="breadcrumbs" class="breadcrumbs">
       <a href="/">Home</a><span>&gt;</span
       ><a href="https://www.all4wins.com/News/">News</a><span>&gt;</span
-      ><span>Roobet's august Action</span>
+      ><span> BC.Game Promo: Free Spins on Thor's Rage</span>
     </div>
     <!-- 
 
@@ -233,167 +232,109 @@
     <main class="container-news">
       <div class="banner-box">
         <a
-          href="https://go.roobet.com/visit/?bta=39114&nci=5719&utm_campaign=promosbjul25 "
-          aria-label="Read more about Premier League with Roobet"
+          href="https://bc.game/i-2bp167xaa-n/ "
+          aria-label="Read more about BCGame 200% bonus"
         >
           <img
-            src="/img/news-banners/roobet-sports-august2025-banner.webp"
-            alt="roobet premier league banner"
+            src="/img/news-banners/bcgame-thor-freespis-banner.webp"
+            alt="BC>GAME 2000 bonus banner"
           />
         </a>
         <div class="news-content-main">
-          <h1>
-            August Action: Exclusive Roobet Sportsbook Promos for Esports &
-            Football Fans
-          </h1>
+          <h1>⚡ Weekend Free Spins: Thor's Rage at BC.Game</h1>
           <div class="claim-news-bonus">
             <a
-              href="https://go.roobet.com/visit/?bta=39114&nci=5719&utm_campaign=promosbjul25 "
+              href="https://bc.game/i-2bp167xaa-n/"
               aria-label="Read more about Premier League with Roobet"
             >
-              <button>Bet Now</button>
+              <button>play Now</button>
             </a>
           </div>
-
-          <
           <p>
-            August is here, and so is the ultimate return of top-tier sports
-            action! Whether you're a fan of European football, UFC fights, or
-            high-stakes CS2 esports, Roobet Sportsbook is serving a thrilling
-            lineup of betting promos you won’t want to miss.
+            Get ready for a thunderous reward this August with BC.Game’s
+            limited-time offer on <strong>Thor’s Rage</strong> by Red Tiger!
+            Spin the reels during selected weekends and earn
+            <strong>10 Free Spins daily</strong> just by playing.
           </p>
 
+          <h2>📅 Promo Period</h2>
           <p>
-            From knockout bonuses to esports raffles, Roobet is powering your
-            bets with extra value all month long. Here’s everything you need to
-            know to boost your winnings and claim your share of free bets, cash
-            prizes, and exclusive rewards.
+            <strong>August 5 – August 30, 2025</strong><br />
+            Available only on specific dates (see schedule below).
           </p>
 
-          <h2>🎯 Bet on CS2 – Win Big with the $10,000 Raffle</h2>
-          <p>
-            CS2 fans, this is your time! Roobet is heating up the esports season
-            with a $10,000 raffle packed with prizes for the most loyal esports
-            bettors.
-          </p>
-
-          <h3>✅ IEM Cologne Promo (Until August 3)</h3>
+          <h3>🕒 Active Dates:</h3>
           <ul>
-            <li>Bet $50+ on any IEM Cologne match</li>
-            <li>Pre-match or live bets (odds 1.20+)</li>
-            <li>Earn 1 raffle ticket per qualifying wager</li>
+            <li>August 5 – 6</li>
+            <li>August 8 – 9</li>
+            <li>August 15 – 16</li>
+            <li>August 22 – 23</li>
+            <li>August 29 – 30</li>
+          </ul>
+          <p><em>Time: 00:00 to 23:59 UTC+0 each day</em></p>
+
+          <h2>🎰 How to Get Your Free Spins</h2>
+          <ol>
+            <li>
+              Play <strong>Thor’s Rage</strong> on any of the active promo days
+            </li>
+            <li>
+              Wager a minimum of <strong>€20</strong> (or equivalent currency)
+            </li>
+            <li>
+              Receive <strong>10 Free Spins</strong> automatically after
+              qualifying
+            </li>
+            <li>Refresh the game to see your Free Spins applied</li>
+          </ol>
+
+          <h2>🎮 Game Involved</h2>
+          <ul>
+            <li>Thor’s Rage by Red Tiger</li>
           </ul>
 
-          <h3>✅ Esports World Cup (August 20–24)</h3>
+          <h2>📌 Important Details</h2>
           <ul>
-            <li>Wager $50+ on any CS2 Esports World Cup match</li>
-            <li>Pre-match or in-play bets with odds of 1.20+</li>
-            <li>Secure 1 raffle entry per bet</li>
+            <li>Offer is available globally</li>
+            <li>Free Spins are valid only on Thor’s Rage</li>
+            <li>Only one reward per player per active day</li>
+            <li>
+              Free Spins must be used within <strong>3 days</strong> of being
+              awarded
+            </li>
+            <li>Promotion is active only on the listed weekend dates</li>
           </ul>
 
-          <p>
-            💡 Tip: The more you wager on CS2, the more entries you collect.
-            Don’t miss out on one of the best esports betting promotions in
-            August!
-          </p>
-
-          <h2>🥊 UFC 319 – Score Fast, Win Faster!</h2>
-          <p>
-            Gone in 60 Seconds is the UFC promo that rewards bold predictions.
-            Think your fighter can end it early?
-          </p>
-
+          <h2>📜 Terms to Remember</h2>
           <ul>
-            <li>Opt in via the promo page</li>
+            <li>Promo is open to all registered BC.Game users</li>
+            <li>Minimum qualifying wager: €20 (or equivalent)</li>
+            <li>Each eligible day offers up to 10 Free Spins per player</li>
             <li>
-              Place a $10+ pre-match bet on the UFC 319 Main Event (Aug 10–17)
+              Spins are non-transferable and valid only on the featured game
             </li>
+            <li>Refreshing the game ensures spins appear correctly</li>
+            <li>Spins expire 72 hours after being credited</li>
             <li>
-              If your fighter wins within the first 60 seconds of Round 1,
-              receive up to $100 as a Free Bet
+              Promotion may be modified or canceled at any time by BC.Game or
+              Red Tiger
             </li>
-          </ul>
-
-          <p>
-            ⚡ This promo is perfect for fans who love fast finishes and
-            explosive betting outcomes in combat sports.
-          </p>
-
-          <h2>⚽ Premier League Bore Draw – Turn 0-0 into Free Bets</h2>
-          <p>
-            Even the dullest football matches can turn into a win with Roobet’s
-            Bore Draw Insurance!
-          </p>
-
-          <ul>
-            <li>
-              Opt in and bet $10+ on select markets (Goalscorer, Correct Score,
-              HT/FT)
-            </li>
-            <li>
-              If your first qualifying bet loses AND the match ends 0-0, get up
-              to $100 back as a Free Bet
-            </li>
-            <li>Valid from August 15 on any Premier League match</li>
           </ul>
 
           <p>
-            🤑 This is one of the smartest football betting promos this month
-            for Premier League fans.
+            ⏳
+            <strong
+              >Don’t miss out on this limited-time weekend offer – spin Thor’s
+              Rage and unlock daily Free Spins this August at BC.Game!</strong
+            >
           </p>
-
-          <h2>
-            ⚽ First Goalscorer Insurance – Get Paid Even If You're Not First
-          </h2>
-          <p>
-            Backing the first goalscorer just got safer with Roobet’s insurance
-            promo on La Liga, Serie A, and Bundesliga matches.
-          </p>
-
-          <ul>
-            <li>Opt in and place a $10+ bet on the first goalscorer market</li>
-            <li>
-              If your pick doesn’t score first but nets one later, earn up to
-              $25 as a Free Bet
-            </li>
-            <li>Promo runs from August 16 until the end of the season</li>
-          </ul>
-
-          <p>
-            💥 Ideal for fans who follow top European leagues and want to
-            maximize their returns on goal betting markets.
-          </p>
-
-          <h2>🎉 Why Bet with Roobet in August?</h2>
-          <p>
-            Roobet Sportsbook continues to stand out in the online gambling
-            space by offering high-value promotions across multiple verticals —
-            from esports to football to UFC. Whether you're a seasoned bettor or
-            just exploring the best sports betting sites, these Roobet promos
-            make August a can’t-miss month.
-          </p>
-
-          <h2>🏆 Your Winning Month Starts Here</h2>
-          <p>
-            Get ready to elevate your sportsbook experience with Roobet’s August
-            promotions. With generous free bet offers, cash raffles, and
-            risk-free betting opportunities, there's never been a better time to
-            join the action.
-          </p>
-
-          <p>
-            Explore top-tier betting odds, unique promotions, and lightning-fast
-            payouts — only at Roobet.
-          </p>
-
-          <p>🔗 Claim These Offers Now at Roobet Sportsbook!</p>
 
           <div class="claim-news-bonus">
             <a
-              href="https://go.roobet.com/visit/?bta=39114&nci=5719&utm_campaign=promosbjul25"
-              aria-label="Read more about Premier League with Roobet"
+              href="https://bc.game/i-2bp167xaa-n/ "
+              aria-label="Read more about bcGames 200% bet bonus"
             >
-              <button>Bet Now</button>
+              <button>Play Now</button>
             </a>
           </div>
         </div>
