--- a/index.html
+++ b/index.html
@@ -254,6 +254,29 @@
               <div class="news-slide">
                 <!-- News divs will be inserted here dynamically -->
 
+                <!-- thor free spins -->
+            <div class="news-item">
+              <a href="/News-Articles/BCGame_Promo_Free_Spins_on_Thor_Rage/">
+                <div class="news-banner">
+                  <img
+                    src="/img/news-banners/bcgame-thor-freespis-news.webp"
+                    width="300"
+                    height="200"
+                    alt="ggbet-esl-bangkok-news"
+                    loading="lazy"
+                  />
+                </div>
+                <div class="news-content">
+                  <h2>Bc.Game - Free Spins on Thor's Rage  <br>
+                  <strong> Offer expires on 31st of August 2025</strong></h2>
+
+                  <div class="news-button">
+                    <button>Read More</button>
+                  </div>
+                </div>
+              </a>
+            </div>
+
                 <!-- roobet august action-->
             <div class="news-item">
               <a href="/News-Articles/Roobet_August_Action/">
