--- a/Reviews-page/GG.Bet/index.html
+++ b/Reviews-page/GG.Bet/index.html
@@ -20,7 +20,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Read our honest review of GG.Bet Casino, the leading platform for online sports and esports betting in 2025. Discover top features, bonuses and betting options!"
+      content="Read our honest review of GG.Bet Casino, the leading platform for online sports and esports betting in 2025. Discover top features, WB up to 3000€ +900 Free Spins and 250€ Freebets and more!!"
     />
     <link rel="icon" type=“image/x-icon” href="/img/favicon.ico">
     <link
@@ -29,7 +29,10 @@
     />
     <link rel="stylesheet" rel="preload" href="/reviews.css" as="style" />
 
-    <title>GG.Bet Casino Review 2025: WB up to 4500€ +275 FS and more!</title>
+    <title>
+      GG.Bet Casino Review 2025: WB up to 3000€ +900 Free Spins and 250€
+      Freebets and more!
+    </title>
     <!-- breadcrumbs -->
     <script type="application/ld+json">
       {
@@ -287,7 +290,7 @@
               </div>
               <div class="casino-bonus">
                 <p class="casino-bonus-title">Casino bonus</p>
-                <p>Bonus up to 4500€ +275 FS</p>
+                <p>Bonus up to 3000€ +900 FS</p>
               </div>
               <div class="buttons-toWebsite">
                 <div class="promo-code">
@@ -310,7 +313,7 @@
               </div>
               <div class="casino-bonus">
                 <p class="casino-bonus-title">ESports bonus</p>
-                <p>500% Welcome bonus on the first three deposits!</p>
+                <p>Welcome bonus up to 1000€ +250€ Freebets</p>
               </div>
               <div class="buttons-toWebsite">
                 <div class="promo-code">
@@ -351,33 +354,82 @@
           </div>
         </div>
         <!-- bonus info -->
-        <h2>Unlock Exciting Rewards with GG.Bet's Generous Bonuses!</h2>
+
+        <h1>Enjoy Exciting Rewards with GG.Bet's Generous Bonuses!</h1>
 
         <h2>Welcome Bonuses for New Players</h2>
 
+        <p>
+          GG.Bet provides a variety of substantial welcome bonuses to entice new
+          players, assuring an exciting start to your betting career.
+        </p>
+
         <h3>1. Sports & Esports Welcome Bonus</h3>
         <p>
-          New sports & Esports betters are in for a treat with a whopping
-          <strong>500% welcome bonus</strong> on their first three deposits,
-          totaling up to <strong>€3,500</strong>! Here’s how it breaks down:
+          New sports and Esports bettors are in for a treat with a massive
+          Welcome bonus up to 1000€ + 250€ Freebets on their first five
+          deposits! Here's the breakdown:
         </p>
+        <h3>🎯 Get More with Your 1st Deposit!</h3>
         <ul>
-          <li>
-            <strong>First Deposit</strong>: 100% match bonus up to
-            <strong>€500</strong> (minimum deposit: €5)
-          </li>
-          <li>
-            <strong>Second Deposit</strong>: 200% match bonus up to
-            <strong>€1,500</strong>
-          </li>
-          <li>
-            <strong>Third Deposit</strong>: 200% match bonus up to
-            <strong>€1,500</strong>
-          </li>
+          <li><strong>Min Deposit: €200</strong><br />Bonus: 200%</li>
+          <li><strong>Min Deposit: €50</strong><br />Bonus: 150%</li>
+          <li><strong>Min Deposit: €20</strong><br />Bonus: 125%</li>
+          <li><strong>Min Deposit: €10</strong><br />Bonus: 100%</li>
         </ul>
+
+        <h3>🎯 2nd Deposit</h3>
+        <ul>
+          <li><strong>Deposit €200+:</strong> 150% + €100 Freebet</li>
+          <li><strong>Deposit €50+:</strong> 140% + €20 Freebet</li>
+          <li><strong>Deposit €20+:</strong> 120% + €10 Freebet</li>
+          <li><strong>Deposit €10+:</strong> 100% + €5 Freebet</li>
+        </ul>
+
+        <h3>🎯 3rd Deposit – Winback Offer</h3>
+        <ul>
+          <li><strong>Deposit €50+:</strong> 100% Winback</li>
+          <li><strong>Deposit €20+:</strong> 75% Winback</li>
+          <li><strong>Deposit €10+:</strong> 50% Winback</li>
+        </ul>
+
+        <h3>🎯 4th Deposit</h3>
+        <ul>
+          <li><strong>Deposit €100+:</strong> 150% Bonus</li>
+          <li><strong>Deposit €20+:</strong> 125% Bonus</li>
+          <li><strong>Deposit €10+:</strong> 100% Bonus</li>
+        </ul>
+
+        <h3>🎯 5th Deposit – Freebet Bonus</h3>
+        <ul>
+          <li><strong>Deposit €100+:</strong> €50 Freebet</li>
+          <li><strong>Deposit €20+:</strong> €10 Freebet</li>
+          <li><strong>Deposit €10+:</strong> €5 Freebet</li>
+        </ul>
+
+        <h3>📋 Bonus Terms</h3>
+        <ul>
+          <li><strong>Minimum Odds Requirement:</strong> 1.7+</li>
+          <li><strong>Wagering Requirement:</strong> 0x (No wagering)</li>
+          <li><strong>Max Bonus:</strong> €400</li>
+        </ul>
+
+        <h3>⚙️ How It Works</h3>
+        <ol>
+          <li>Register your GG.Bet account</li>
+          <li>Activate the sports/esports bonus before each deposit</li>
+          <li>Make your qualifying deposit</li>
+          <li>Claim your bonus, freebets, or winback instantly</li>
+        </ol>
+
+        <p>
+          <strong>Note:</strong> Each deposit level offers tailored rewards.
+          Ensure bonus activation before depositing. Only bets with odds of 1.7
+          or higher qualify.
+        </p>
         <div class="review-img">
           <img
-            src="/img/news-banners/gg.bet-welcome-bonus.webp"
+            src="/img/news-banners/ggbet-sports-wb.webp"
             loading="lazy"
             alt="bc.game site"
           />
@@ -393,44 +445,74 @@
         <h3>2. Casino Welcome Bonus</h3>
         <p>
           New casino players can enjoy a
-          <strong>welcome bonus of up to 4,500€ + 275 free spins</strong> spread
-          over four deposits. The details are as follows:
+          <strong>welcome bonus of up to 3,000€ + 900 free spins</strong>
+          spread over seven deposits. The details are as follows:
         </p>
         <div class="review-img">
           <img
-            src="/img/news-banners/gg.bet-banner.webp"
+            src="/img/news-banners/ggbet-Wb.webp"
             loading="lazy"
             alt="bc.game site"
           />
         </div>
+        <h3>🎁 1st Deposit Bonus</h3>
+        <p><strong>Get more with your 1st deposit!</strong></p>
+        <ul>
+          <li>
+            <strong>Min Deposit: €100</strong><br />
+            Bonus: 200% + 50 Free Spins
+          </li>
+          <li>
+            <strong>Min Deposit: €50</strong><br />
+            Bonus: 180% + 50 Free Spins
+          </li>
+          <li>
+            <strong>Min Deposit: €20</strong><br />
+            Bonus: 165% + 30 Free Spins
+          </li>
+          <li>
+            <strong>Min Deposit: €10</strong><br />
+            Bonus: 150% + 20 Free Spins
+          </li>
+        </ul>
+
+        <p><strong>Game for Free Spins:</strong> Gates of Olympus 1000</p>
+        <p><strong>Wagering Requirement:</strong> 40x</p>
+        <p><strong>Max Bonus:</strong> €500</p>
+
+        <h3>🎁 2nd – 5th Deposit Bonuses</h3>
+        <ul>
+          <li><strong>Deposit €100+:</strong> 150% + 100 Free Spins</li>
+          <li><strong>Deposit €50+:</strong> 140% + 75 Free Spins</li>
+          <li><strong>Deposit €20+:</strong> 130% + 50 Free Spins</li>
+          <li><strong>Deposit €10+:</strong> 120% + 25 Free Spins</li>
+        </ul>
+
+        <h3>🎁 6th Deposit Bonus</h3>
+        <ul>
+          <li><strong>Deposit €50+:</strong> 350 Free Spins</li>
+          <li><strong>Deposit €20+:</strong> 150 Free Spins</li>
+          <li><strong>Deposit €10+:</strong> 60 Free Spins</li>
+        </ul>
+
+        <h3>🎁 7th Deposit Bonus</h3>
+        <ul>
+          <li><strong>Deposit €50+:</strong> 175% Bonus</li>
+          <li><strong>Deposit €20+:</strong> 175% Bonus</li>
+          <li><strong>Deposit €10+:</strong> 150% Bonus</li>
+        </ul>
+
+        <h3>⚙️ How It Works</h3>
         <ol>
-          <li>
-            <strong>First Deposit:</strong> Make a first deposit of at least €7
-            and get a 100% deposit bonus and 75 free spins in Big Bass Splash.
-            The maximum bonus amount is €1,500.
-          </li>
-          <br />
-          <li>
-            <strong>Second Deposit:</strong> Make a second deposit of at least
-            10€ and get a 125% deposit bonus and 100 free spins in Book of
-            GGBet. The maximum bonus amount is €1,000.
-          </li>
-          <br />
-          <li>
-            <strong>Third Deposit:</strong> Make a third deposit of at least 10€
-            and get a 150% deposit bonus and 100 free spins in Gates of Olympus
-            1000. The maximum bonus amount is €1,000.
-          </li>
-          <br />
-          <li>
-            <strong>Fourth Deposit:</strong> Make a fourth deposit of at least
-            15€and get a 175% deposit bonus. The maximum bonus amount is €1,000.
-          </li>
+          <li>Register your GG.Bet account</li>
+          <li>Activate the bonus from your profile</li>
+          <li>Make your deposit</li>
+          <li>Claim your bonus instantly</li>
         </ol>
+
         <p>
-          <em>Wagering Requirements</em>: Cash bonuses are subject to
-          <strong>x40</strong> and free spins <strong>x30</strong>, to be
-          wagered within <strong>5 days</strong>.
+          <strong>Note:</strong> Bonus percentages and spins depend on deposit
+          amount. Make sure to activate your bonus before depositing.
         </p>
 
         <h2>Weekly Bonuses</h2>
@@ -627,13 +709,6 @@
 
           <div class="overview-summary">
             <h1>Enjoy Exciting Rewards with GG.Bet's Generous Bonuses!</h1>
-            <div class="review-img">
-              <img
-                src="/img/news-banners/gg.bet-casino.webp"
-                loading="lazy"
-                alt="ggbet site"
-              />
-            </div>
 
             <h2>Welcome Bonuses for New Players</h2>
 
@@ -645,26 +720,69 @@
             <h3>1. Sports & Esports Welcome Bonus</h3>
             <p>
               New sports and Esports bettors are in for a treat with a massive
-              500% welcome bonus on their first three deposits, worth up to
-              €3,500! Here's the breakdown:
+              Welcome bonus up to 1000€ + 250€ Freebets on their first five
+              deposits! Here's the breakdown:
             </p>
+            <h3>🎯 Get More with Your 1st Deposit!</h3>
             <ul>
-              <li>
-                <strong>First Deposit</strong>: 100% match bonus up to
-                <strong>€500</strong> (minimum deposit: €5)
-              </li>
-              <li>
-                <strong>Second Deposit</strong>: 200% match bonus up to
-                <strong>€1,500</strong>
-              </li>
-              <li>
-                <strong>Third Deposit</strong>: 200% match bonus up to
-                <strong>€1,500</strong>
-              </li>
+              <li><strong>Min Deposit: €200</strong><br />Bonus: 200%</li>
+              <li><strong>Min Deposit: €50</strong><br />Bonus: 150%</li>
+              <li><strong>Min Deposit: €20</strong><br />Bonus: 125%</li>
+              <li><strong>Min Deposit: €10</strong><br />Bonus: 100%</li>
             </ul>
+
+            <h3>🎯 2nd Deposit</h3>
+            <ul>
+              <li><strong>Deposit €200+:</strong> 150% + €100 Freebet</li>
+              <li><strong>Deposit €50+:</strong> 140% + €20 Freebet</li>
+              <li><strong>Deposit €20+:</strong> 120% + €10 Freebet</li>
+              <li><strong>Deposit €10+:</strong> 100% + €5 Freebet</li>
+            </ul>
+
+            <h3>🎯 3rd Deposit – Winback Offer</h3>
+            <ul>
+              <li><strong>Deposit €50+:</strong> 100% Winback</li>
+              <li><strong>Deposit €20+:</strong> 75% Winback</li>
+              <li><strong>Deposit €10+:</strong> 50% Winback</li>
+            </ul>
+
+            <h3>🎯 4th Deposit</h3>
+            <ul>
+              <li><strong>Deposit €100+:</strong> 150% Bonus</li>
+              <li><strong>Deposit €20+:</strong> 125% Bonus</li>
+              <li><strong>Deposit €10+:</strong> 100% Bonus</li>
+            </ul>
+
+            <h3>🎯 5th Deposit – Freebet Bonus</h3>
+            <ul>
+              <li><strong>Deposit €100+:</strong> €50 Freebet</li>
+              <li><strong>Deposit €20+:</strong> €10 Freebet</li>
+              <li><strong>Deposit €10+:</strong> €5 Freebet</li>
+            </ul>
+
+            <h3>📋 Bonus Terms</h3>
+            <ul>
+              <li><strong>Minimum Odds Requirement:</strong> 1.7+</li>
+              <li><strong>Wagering Requirement:</strong> 0x (No wagering)</li>
+              <li><strong>Max Bonus:</strong> €400</li>
+            </ul>
+
+            <h3>⚙️ How It Works</h3>
+            <ol>
+              <li>Register your GG.Bet account</li>
+              <li>Activate the sports/esports bonus before each deposit</li>
+              <li>Make your qualifying deposit</li>
+              <li>Claim your bonus, freebets, or winback instantly</li>
+            </ol>
+
+            <p>
+              <strong>Note:</strong> Each deposit level offers tailored rewards.
+              Ensure bonus activation before depositing. Only bets with odds of
+              1.7 or higher qualify.
+            </p>
             <div class="review-img">
               <img
-                src="/img/news-banners/gg.bet-welcome-bonus.webp"
+                src="/img/news-banners/ggbet-sports-wb.webp"
                 loading="lazy"
                 alt="bc.game site"
               />
@@ -680,45 +798,75 @@
             <h3>2. Casino Welcome Bonus</h3>
             <p>
               New casino players can enjoy a
-              <strong>welcome bonus of up to 4,500€ + 275 free spins</strong>
-              spread over four deposits. The details are as follows:
+              <strong>welcome bonus of up to 3,000€ + 900 free spins</strong>
+              spread over seven deposits. The details are as follows:
             </p>
             <div class="review-img">
               <img
-                src="/img/news-banners/gg.bet-banner.webp"
+                src="/img/news-banners/ggbet-Wb.webp"
                 loading="lazy"
                 alt="bc.game site"
               />
             </div>
+            <h3>🎁 1st Deposit Bonus</h3>
+            <p><strong>Get more with your 1st deposit!</strong></p>
+            <ul>
+              <li>
+                <strong>Min Deposit: €100</strong><br />
+                Bonus: 200% + 50 Free Spins
+              </li>
+              <li>
+                <strong>Min Deposit: €50</strong><br />
+                Bonus: 180% + 50 Free Spins
+              </li>
+              <li>
+                <strong>Min Deposit: €20</strong><br />
+                Bonus: 165% + 30 Free Spins
+              </li>
+              <li>
+                <strong>Min Deposit: €10</strong><br />
+                Bonus: 150% + 20 Free Spins
+              </li>
+            </ul>
+
+            <p><strong>Game for Free Spins:</strong> Gates of Olympus 1000</p>
+            <p><strong>Wagering Requirement:</strong> 40x</p>
+            <p><strong>Max Bonus:</strong> €500</p>
+
+            <h3>🎁 2nd – 5th Deposit Bonuses</h3>
+            <ul>
+              <li><strong>Deposit €100+:</strong> 150% + 100 Free Spins</li>
+              <li><strong>Deposit €50+:</strong> 140% + 75 Free Spins</li>
+              <li><strong>Deposit €20+:</strong> 130% + 50 Free Spins</li>
+              <li><strong>Deposit €10+:</strong> 120% + 25 Free Spins</li>
+            </ul>
+
+            <h3>🎁 6th Deposit Bonus</h3>
+            <ul>
+              <li><strong>Deposit €50+:</strong> 350 Free Spins</li>
+              <li><strong>Deposit €20+:</strong> 150 Free Spins</li>
+              <li><strong>Deposit €10+:</strong> 60 Free Spins</li>
+            </ul>
+
+            <h3>🎁 7th Deposit Bonus</h3>
+            <ul>
+              <li><strong>Deposit €50+:</strong> 175% Bonus</li>
+              <li><strong>Deposit €20+:</strong> 175% Bonus</li>
+              <li><strong>Deposit €10+:</strong> 150% Bonus</li>
+            </ul>
+
+            <h3>⚙️ How It Works</h3>
             <ol>
-              <li>
-                <strong>First Deposit:</strong> Make a first deposit of at least
-                €7 and get a 100% deposit bonus and 75 free spins in Big Bass
-                Splash. The maximum bonus amount is €1,500.
-              </li>
-              <br />
-              <li>
-                <strong>Second Deposit:</strong> Make a second deposit of at
-                least 10€ and get a 125% deposit bonus and 100 free spins in
-                Book of GGBet. The maximum bonus amount is €1,000.
-              </li>
-              <br />
-              <li>
-                <strong>Third Deposit:</strong> Make a third deposit of at least
-                10€ and get a 150% deposit bonus and 100 free spins in Gates of
-                Olympus 1000. The maximum bonus amount is €1,000.
-              </li>
-              <br />
-              <li>
-                <strong>Fourth Deposit:</strong> Make a fourth deposit of at
-                least 15€and get a 175% deposit bonus. The maximum bonus amount
-                is €1,000.
-              </li>
+              <li>Register your GG.Bet account</li>
+              <li>Activate the bonus from your profile</li>
+              <li>Make your deposit</li>
+              <li>Claim your bonus instantly</li>
             </ol>
+
             <p>
-              <em>Wagering Requirements</em>: Cash bonuses are subject to
-              <strong>x40</strong> and free spins <strong>x30</strong>, to be
-              wagered within <strong>5 days</strong>.
+              <strong>Note:</strong> Bonus percentages and spins depend on
+              deposit amount. Make sure to activate your bonus before
+              depositing.
             </p>
 
             <h2>Ongoing Promotions and Weekly Bonuses</h2>
