--- a/Sports/index.html
+++ b/Sports/index.html
@@ -1242,9 +1242,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">
-                  500% Welcome bonus on the first three deposits!
-                </p>
+                <p class="info">Welcome Bonus up to 1000€ +250€ Freebets</p>
               </div>
 
               <div class="buttons-bonus">
