--- a/Bonuses/First-Deposit/index.html
+++ b/Bonuses/First-Deposit/index.html
@@ -723,7 +723,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">Bonus up to 4500 € +275 FS</p>
+                <p class="info">Bonus up to 3000 € +900 Free spins</p>
               </div>
 
               <div class="buttons-bonus">
