--- a/Esports/index.html
+++ b/Esports/index.html
@@ -543,7 +543,7 @@
                   </div>
 
                   <div class="content-top">
-                    <p>Welcome Bonus up to 500% + 200$ in free bets</p>
+                    <p>Welcome Bonus up to 1000€ + 250€ Freebets</p>
                   </div>
 
                   <div class="top-bonus">
