--- a/index.html
+++ b/index.html
@@ -254,6 +254,31 @@
               <div class="news-slide">
                 <!-- News divs will be inserted here dynamically -->
 
+                 <!--duelbits thors rage-->
+            <div class="news-item">
+              <a
+                href="/News-Articles/Duelbits_Thor_Rage_Slot_Win_Up_to_10000x/"
+              >
+                <div class="news-banner">
+                  <img
+                    src="/img/news-banners/duelbits-thor-news.webp"
+                    width="300"
+                    height="200"
+                    alt="ggbet-esl-bangkok-news"
+                    loading="lazy"
+                  />
+                </div>
+                <div class="news-content">
+                  <h2>Play Duelbits Thor’s Rage Slot – Win Up to 10,000x! <br>
+                  <strong> Offer ongoing </strong></h2>
+
+                  <div class="news-button">
+                    <button>Read More</button>
+                  </div>
+                </div>
+              </a>
+            </div>
+
                 <!-- thor free spins -->
             <div class="news-item">
               <a href="/News-Articles/BCGame_Promo_Free_Spins_on_Thor_Rage/">
