--- a/News-Articles/BCGame_Promo_Free_Spins_on_Thor_Rage/index.html
+++ b/News-Articles/BCGame_Promo_Free_Spins_on_Thor_Rage/index.html
@@ -232,7 +232,7 @@
     <main class="container-news">
       <div class="banner-box">
         <a
-          href="https://bc.game/i-2bp167xaa-n/ "
+          href="https://hash.game/i-2bp167xaa-n/"
           aria-label="Read more about BCGame 200% bonus"
         >
           <img
@@ -244,7 +244,7 @@
           <h1>⚡ Weekend Free Spins: Thor's Rage at BC.Game</h1>
           <div class="claim-news-bonus">
             <a
-              href="https://bc.game/i-2bp167xaa-n/"
+              href="https://hash.game/i-2bp167xaa-n/"
               aria-label="Read more about Premier League with Roobet"
             >
               <button>play Now</button>
@@ -331,7 +331,7 @@
 
           <div class="claim-news-bonus">
             <a
-              href="https://bc.game/i-2bp167xaa-n/ "
+              href="https://hash.game/i-2bp167xaa-n/ "
               aria-label="Read more about bcGames 200% bet bonus"
             >
               <button>Play Now</button>
