--- a/Casinos/index.html
+++ b/Casinos/index.html
@@ -278,6 +278,29 @@
               <div class="news-slide">
                 <!-- News divs will be inserted here dynamically -->
 
+                 <!--betfury-100 free pins-->
+            <div class="news-item">
+              <a href="/News-Articles/BetFury-100-Free-Spins-No-Deposit">
+                <div class="news-banner">
+                  <img
+                    src="/img/news-banners/BetFury-banner-news.webp"
+                    width="300"
+                    height="200"
+                    alt="ggbet-esl-bangkok-news"
+                    loading="lazy"
+                  />
+                </div>
+                <div class="news-content">
+                  <h2>BetFury 100 Free Spins No Deposit Sign Up Bonus! <br>
+                 <strong> Promotion onging</strong></h2>
+
+                  <div class="news-button">
+                    <button>Read More</button>
+                  </div>
+                </div>
+              </a>
+            </div>
+
                  <!--duelbits thors rage-->
             <div class="news-item">
               <a
