--- a/News-Articles/BetFury-100-Free-Spins-No-Deposit/index.html
+++ b/News-Articles/BetFury-100-Free-Spins-No-Deposit/index.html
@@ -20,18 +20,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Are you ready for an exciting casino adventure? Betfury is offering a limited-time bonus of 100 Free Spins just for signing up!Available only for the first 24 hours after registration.
+      content="Claim 100 free spins no deposit at BetFury! Learn how to activate your no deposit bonus, play selected casino games, and meet wagering requirements.
     "
     />
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico" />
     <link
       rel="canonical"
-      href="https://www.all4wins.com/News-Articles/BetFury-100Free-spins/"
+      href="https://www.all4wins.com/News-Articles/BetFury-100-Free-Spins-No-Deposit/"
     />
 
     <link rel="stylesheet" href="/newx-demoGames.css" />
 
-    <title>Unlock 100 Free Spins Instantly—Join Betfury Today!</title>
+    <title>BetFury 100 Free Spins No Deposit – Complete Guide</title>
 
     <script type="application/ld+json">
       {
@@ -53,8 +53,8 @@
           {
             "@type": "ListItem",
             "position": 3,
-            "name": "BetFury 100Free spins",
-            "item": "https://www.all4wins.com/News-Articles/BetFury-100Free-spins/"
+            "name": "BetFury 100 Free Spins No Deposit",
+            "item": "https://www.all4wins.com/News-Articles/BetFury-100-Free-Spins-No-Deposit/"
           }
         ]
       }
@@ -222,7 +222,7 @@
     <div id="breadcrumbs" class="breadcrumbs">
       <a href="/">Home</a><span>&gt;</span
       ><a href="https://www.all4wins.com/News/">News</a><span>&gt;</span
-      ><span>BetFury 100Free spins</span>
+      ><span>BetFury 100 Free Spins No Deposit</span>
     </div>
     <!-- 
 
@@ -237,12 +237,12 @@
           aria-label="Read more about Premier League with Roobet"
         >
           <img
-            src="/img/news-banners/BetFury-banner.webp"
+            src="/img/news-banners/betfury-bananza.webp"
             alt="BetFury banner"
           />
         </a>
         <div class="news-content-main">
-          <h1>Unlock 100 Free Spins Instantly—Join Betfury Today!</h1>
+          <h1>BetFury 100 Free Spins No Deposit – Complete Guide</h1>
 
           <div class="claim-news-bonus">
             <a
@@ -253,68 +253,125 @@
             </a>
           </div>
           <p>
-            Are you ready for an exciting casino adventure? Betfury is offering
-            a limited-time bonus of 100 Free Spins just for signing up!
-          </p>
-          <p>
-            Don’t miss your chance to start winning right away—this exclusive
-            offer is available only for the first 24 hours after registration.
-          </p>
-          <h2>How to Claim Your 100 Free Spins:</h2>
-          <h3>Quick & Easy Registration:</h3>
-          <p>
-            Sign up on Betfury and unlock 100 Free Spins, instantly available
-            for you.
-          </p>
-          <h3>Activate Your Bonus:</h3>
-          <p>
-            Activate Your Bonus: Visit the “Bonuses” page and click “Activate”
-            on the bonus card to get started. Remember, the clock is ticking,
-            and you have just 24 hours!
-          </p>
-          <h3>Pick Your Game:</h3>
-          <p>
-            Choose one game from the platform's selection and play all 100 Free
-            Spins on it. Choose wisely, as you won’t be able to change the game
-            afterward!
-          </p>
-          <h3>Spin & Win:</h3>
-          <p>
-            Choose one game from the platform's selection and play all 100 Dive
-            into the action, enjoy the thrill, and watch your winnings grow.
-          </p>
-          <h2>Key Details You Should Know:</h2>
-          <h3>Act Fast—24-Hour Activation:</h3>
-          <p>
-            You’ve got just 24 hours from the moment you register to activate
-            and use your Free Spins. Don’t let this amazing offer slip away!
-          </p>
-          <p>
-            Cash Out Your Winnings: After you’ve used all 100 Free Spins, your
-            winnings will be credited in USD to your bonus card. To transfer
-            these to your bonus balance, simply make a minimum deposit of $40.
-            This deposit helps keep things fair and secure for everyone.
-          </p>
-          <h3>Wagering Requirements:</h3>
-          <p>
-            You’ll have 14 days to meet the x40 wagering requirement after
-            making your deposit. If you don’t meet the requirements in time,
-            your winnings will be forfeited.
-          </p>
-          <h2>Start Spinning & Winning Today!</h2>
-          <p>
-            This is your chance to kick off your Betfury journey with a bang!
-            Sign up now, activate your bonus, and take a spin towards big wins
-            with 100 Free Spins. Your next big win could be just a spin away!
-          </p>
-          <h3>Your Winning Strategy Starts Here</h3>
-          <p>
-            Why wait? The sooner you sign up, the sooner you could be racking up
-            those wins. With 100 Free Spins ready to go, there’s no better time
-            to start your Betfury adventure. Sign up today and
-            let the fun begin!
+            New players at BetFury can claim
+            <strong>100 free spins no deposit</strong> as part of the signup
+            bonus. This <strong>no deposit</strong> offer allows you to try
+            selected casino games without spending your own money. Here’s
+            everything you need to know about activating and using your bonus.
           </p>
 
+          <h2>How to Claim Your Free Spins No Deposit</h2>
+          <ol>
+            <li>
+              <strong>Register an Account</strong> – Create a new
+              <a
+                href="https://betfury.bet/d222bace9 "
+                aria-label="Read more about Premier League with Roobet"
+                ><strong>BetFury account</strong></a
+              >.
+            </li>
+            <li>
+              <strong>Activate the Bonus</strong> – Go to the “Bonuses” page
+              within 24 hours of registration to activate your
+              <strong>100 free spins no deposit</strong>.
+            </li>
+            <li>
+              <strong>Choose Your Game</strong> – You must select one game from
+              the platform’s list to play all 100 free spins. Only games
+              approved by BetFury are eligible.
+            </li>
+          </ol>
+          <p>
+            ⚠️ Free spins not activated within 24 hours will be canceled
+            automatically.
+          </p>
+
+          <h2>Using the Free Spins No Deposit</h2>
+          <p>
+            The bonus spins are credited to your bonus balance once activated.
+          </p>
+          <p>
+            To withdraw winnings from these free spins, a minimum deposit of $10
+            (crypto equivalent) must be made on your main balance.
+          </p>
+          <p>
+            The wagering requirement for these winnings is x40, meaning you need
+            to bet 40 times the bonus winnings before transferring them to your
+            main balance.
+          </p>
+
+          <h3>Wagering Rules</h3>
+          <ul>
+            <li>Minimum bet: $0.1</li>
+            <li>Maximum bet: $10</li>
+            <li>
+              Bets made using bonus funds cannot be used in other promotions,
+              tournaments, or bonus games.
+            </li>
+            <li>
+              For mixed bets using both main and bonus balances, winnings are
+              distributed proportionally based on each balance.
+            </li>
+          </ul>
+
+          <h2>Important Terms and Restrictions</h2>
+          <ul>
+            <li>
+              Bonus funds are only valid on selected casino games. Sports, table
+              games, and some slots are excluded.
+            </li>
+            <li>
+              Users cannot attempt to circumvent the bonus rules; doing so may
+              result in account suspension or confiscation of winnings.
+            </li>
+            <li>
+              The maximum payout from the
+              <strong>100 free spins no deposit</strong> bonus is 1.5x the
+              initially credited bonus. Any excess will be removed.
+            </li>
+            <li>
+              If you have other active bonuses, they must be completed or
+              canceled before withdrawing funds from your main balance.
+            </li>
+          </ul>
+
+          <h2>Why Choose BetFury Free Spins No Deposit</h2>
+          <ul>
+            <li>
+              <strong>Risk-Free Gaming:</strong> Play and win without depositing
+              your own funds initially.
+            </li>
+            <li>
+              <strong>Flexible Games:</strong> Enjoy a range of
+              platform-selected games with your free spins.
+            </li>
+            <li>
+              <strong>Clear Terms:</strong> Wagering requirements and
+              restrictions are clearly outlined to prevent confusion.
+            </li>
+            <li>
+              <strong>Crypto-Friendly:</strong> Deposit and withdraw in multiple
+              cryptocurrencies once you meet bonus requirements.
+            </li>
+          </ul>
+
+          <h2>Quick Tips</h2>
+          <ul>
+            <li>Only one game can be chosen for all 100 free spins.</li>
+            <li>
+              Complete the wagering requirements as soon as possible to withdraw
+              your winnings.
+            </li>
+            <li>
+              Avoid using the bonus in any prohibited way to prevent forfeiting
+              funds.
+            </li>
+          </ul>
+
+          <p>
+            Claim your <strong>100 free spins no deposit</strong> today and
+            explore BetFury’s games with no financial risk!
+          </p>
           <div class="claim-news-bonus">
             <a
               href="https://betfury.bet/d222bace9 "
